objects/Submission_Round_Robin__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeBuyer_eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HomeBuyer eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Buyer_Canada_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Buyer Canada Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Max_Capacity__c</fullName>
        <formula>IF( Max_number_of_opportunities__c  &lt;=  IA_Number_of_Assigned_Opportunities__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA Max Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Number_of_Assigned_Opportunities__c</fullName>
        <formula>User__r.IA_Number_of_Assigned_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA Number of Assigned Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Submission_Received_Date_Time__c</fullName>
        <label>Last Submission Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_number_of_opportunities__c</fullName>
        <label>Max number of opportunities</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_assigned_opportunities__c</fullName>
        <formula>User__r.Number_of_assigned_opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TS Number of assigned opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Submission Round Robin</relationshipLabel>
        <relationshipName>Submission_Round_Robin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction Specialists</fullName>
                </value>
                <value>
                    <fullName>Transaction Specialists Management</fullName>
                </value>
                <value>
                    <fullName>Investment Analysts</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction Specialist</fullName>
                </value>
                <value>
                    <fullName>Investment Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TS_Max_Capacity__c</fullName>
        <formula>IF( Max_number_of_opportunities__c  &lt;=  Number_of_assigned_opportunities__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TS Max Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Submission_Round_Robin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submission Round Robin</label>
    <listViews>
        <fullName>Operations_Round_Robin_List</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <columns>TS_Max_Capacity__c</columns>
        <columns>Number_of_assigned_opportunities__c</columns>
        <columns>IA_Max_Capacity__c</columns>
        <columns>IA_Number_of_Assigned_Opportunities__c</columns>
        <columns>HomeBuyer_eligible__c</columns>
        <columns>Max_number_of_opportunities__c</columns>
        <columns>Role__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Last_Submission_Received_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Operations Round Robin List</label>
    </listViews>
    <listViews>
        <fullName>TS_Assignment_View</fullName>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <columns>HomeBuyer_eligible__c</columns>
        <columns>Number_of_assigned_opportunities__c</columns>
        <columns>Max_number_of_opportunities__c</columns>
        <columns>TS_Max_Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Transaction Specialist</value>
        </filters>
        <label>TS Assignment View</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{000}</displayFormat>
        <label>Submission Round Robin	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>